--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.1.4",
     "@studio-freight/react-lenis": "^0.0.36",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
