--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.7.1",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "virtual-scroll": "^2.2.1"
   }
 }
