--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.2",
+    "split-type": "^0.3.4",
     "virtual-scroll": "^2.2.1"
   }
 }
