--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.2",
     "split-type": "^0.3.4",
+    "swr": "^2.2.5",
     "virtual-scroll": "^2.2.1"
   }
 }
