--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lbt-imports",
+  "name": "transition_page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.1.4",
-    "@studio-freight/react-lenis": "^0.0.36",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@steveeeie/react-page-transition": "^1.3.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "csstype": "^3.1.3",
     "gsap": "^3.12.5",
-    "jquery": "^3.7.1",
-    "next": "14.1.4",
+    "history": "^4.10.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.8.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "5.2.0",
+    "react-transition-group": "^4.4.5",
+    "redux": "^5.0.1",
     "split-type": "^0.3.4",
-    "swr": "^2.2.5",
-    "virtual-scroll": "^2.2.1"
+    "styled-components": "^6.1.9"
   }
 }
