--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@steveeeie/react-page-transition": "^1.3.0",
     "@studio-freight/lenis": "^1.0.42",
